--- a/diploma/Дипломv0.1/bib/cite.bib
+++ b/diploma/Дипломv0.1/bib/cite.bib
@@ -86,6 +86,26 @@ title={iPerf 3 user documentation},
 URL={https://iperf.fr/iperf-doc.php}
 }
 
+@Online{toml,
+title={TOML},
+URL= {https://toml.io/en/}
+}
+
+
+@techreport{rfc2001,
+  author = {W. Richard Stevens},
+  title = {TCP Slow Start, Congestion Avoidance, Fast Retransmit, and Fast Recovery Algorithms},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = 2001,
+  year = {1997},
+  month = {01},
+  publisher = {RFC Editor},
+  institution = {RFC Editor},
+  url = {https://datatracker.ietf.org/doc/html/rfc2001}
+}
+
+
 @techreport{rfc5166,
   author = {S. Floyd},
   title = {Metrics for the Evaluation of Congestion Control Mechanisms},
