--- a/diploma/Диплом/bib/cite.bib
+++ b/diploma/Диплом/bib/cite.bib
@@ -96,7 +96,20 @@ title={sleep(3) — Linux manual page},
 URL={https://man7.org/linux/man-pages/man3/sleep.3.html}
 }
 
+@Online{pip,
+title={pip},
+URL={https://pypi.org/project/pip/}
+}
 
+@Online{ns3,
+title={ns-3 - Network Simulator},
+URL={https://www.nsnam.org}
+}
+
+@Online{gns3,
+title={gns3},
+URL={https://www.gns3.com}
+}
 
 @techreport{rfc2001,
   author = {W. Richard Stevens},
@@ -138,6 +151,14 @@ URL={https://man7.org/linux/man-pages/man3/sleep.3.html}
   url = {https://www.rfc-editor.org/rfc/rfc8312.txt}
 }
 
+
+@article{iot,
+  title={Internet of Things (IoT) for Next-Generation Smart Systems: A Review of Current Challenges, Future Trends and Prospects for Emerging 5G-IoT Scenarios},
+  author={Kinza Shafique and  Bilal A. Khawaja and Farah Sabir, Sameer Qazi and Muhammad Mustaqim},
+  journal={Information and Telecommunication Sciences},
+  year={2020},
+  publisher={IEEE}
+}
 
 @article{article_ros,
   title={RESEARCH OF SDN NETWORK PERFORMANCE PARAMETERS USING MININET NETWORK EMULATOR},
