--- a/diploma/Диплом/bib/cite.bib
+++ b/diploma/Диплом/bib/cite.bib
@@ -207,3 +207,12 @@ URL={https://www.gns3.com}
   year      = 2020,
   publisher = "IEEE",
 }
+
+@article{my_conf_work,
+  author  = "С. М. Наливайко",
+  title   = "Автоматизация процессов моделирования и измерения сетевых характеристик в Mininet",
+  journal = "Информационно-телекоммуникационные технологии и математическое моделирование высокотехнологичных систем: материалы Всероссийской конференции с международным участием",
+  year    = 2022,
+  pages   = "397--403",
+  address = "Москва, РУДН"
+}
