--- a/diploma/Диплом/bib/cite.bib
+++ b/diploma/Диплом/bib/cite.bib
@@ -33,10 +33,6 @@ title={TCP BBR v2 Alpha/Preview Release},
 URL={https://github.com/google/bbr/blob/v2alpha/README.md}
 }
 
-@Online{bbrv1,
-title={TCP BBR Quick-Start: Building and Running TCP BBR on Google Compute Engine},
-URL={https://github.com/google/bbr/blob/master/Documentation/bbr-quick-start.md}
-}
 
 @Online{tc_netem,
 title={tc-netem(8) — Linux manual page},
@@ -215,4 +211,14 @@ URL={https://www.gns3.com}
   year    = 2022,
   pages   = "397--403",
   address = "Москва, РУДН"
+}
+
+
+@article{bbrv1,
+  author  = "Neal Cardwell and Yuchung Cheng and C. Stephen Gunn and Soheil Hassas Yeganeh and Van Jacobson",
+  title   = "BBR: Congestion-Based Congestion Control",
+  journal = "ACM Queue",
+  year    = 2016,
+  volume   = "14",
+  pages   = "20--53"
 }
